# CUDA-Mandelbrot-Set

./: CMakeLists.txt  README.md
includes/: interactions.h  kernel.h
src/: kernel.cu  main.cpp
